# arxiv-rag

./: .gitignore  README.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/routes/: chat.py  eval.py  papers.py  sessions.py
backend/core/: config.py  database.py  redis_client.py
backend/eval/: langfuse_tracer.py  ragas_evaluator.py
backend/generation/: citation_extractor.py  claude_client.py  prompt_builder.py
backend/ingestion/: arxiv_client.py  chunker.py  embedder.py  pdf_parser.py  pipeline.py
backend/memory/: conversation_store.py
backend/models/: eval.py  paper.py  session.py
backend/retrieval/: context_builder.py  reranker.py  vector_store.py
frontend/: package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/[sessionId]/: page.tsx
frontend/app/eval/: page.tsx
frontend/app/papers/: page.tsx
frontend/hooks/: useChat.ts  usePapers.ts
frontend/lib/: api.ts  types.ts
infrastructure/: docker-compose.yml  railway.toml
