[tool.poetry]
name = "arxiv-rag-backend"
version = "0.1.0"
description = "Production RAG system for arXiv research papers"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.6"
anthropic = "^0.28.0"
voyageai = "^0.2.3"
pinecone-client = "^4.1.0"
cohere = "^5.5.8"
arxiv = "^2.1.0"
pymupdf = "^1.24.5"
langchain = "^0.2.5"
langchain-text-splitters = "^0.2.2"
ragas = "^0.1.11"
langfuse = "^2.40.0"
httpx = "^0.27.0"
sse-starlette = "^2.1.0"
slowapi = "^0.1.9"
tenacity = "^8.4.1"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
